--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="css/style.css">
   
   <title>Frontend Mentor | Order summary card</title>
 
@@ -16,18 +17,36 @@
 </head>
 <body>
 
-  Order Summary
+  <main>
+      <div class="img">
+        <img src="/images/illustration-hero.svg" alt="">
+      </div>
+      <div class="details">
+        <h1 class="title">
+          Order Summary
+        </h1>
+        <p class="description">
+          You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!
+        </p>
 
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!
+        <div class="plan-selected">
+          <img src="/images/icon-music.svg" alt="Music-type plan">
+          <div class="plan">
+            <p class="type">Annual Plan </p> 
+            <p class="price">$59.99/year </p> 
+          </div>
+          <a href="#" class="action">Change</a>
+        </div>
 
-  Annual Plan
-  $59.99/year
+        <a class="brn brn-block" href="#" >Proceed to Payment</a>
+        
+        <a href="#">Cancel Order</a>
 
-  Change
+      </div>
 
-  Proceed to Payment
-  Cancel Order
+  </main>
+
+
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
