--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+
   </style>
 </head>
 <body>
@@ -38,9 +37,9 @@
           <a href="#" class="action">Change</a>
         </div>
 
-        <a class="brn brn-block" href="#" >Proceed to Payment</a>
+        <a class="btn btn-block" href="#" >Proceed to Payment</a>
         
-        <a href="#">Cancel Order</a>
+        <a class="cancel" href="#">Cancel Order</a>
 
       </div>
 
@@ -49,8 +48,8 @@
 
   
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Challenge by <a href="https://www.frontendmentor.io/challenges/order-summary-component-QlPmajDUj" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="https://www.frontendmentor.io/profile/danyelcid">Dany el Cid</a>.
   </div>
 </body>
 </html>
