--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 
   
-  <div class="attribution">
+  <div class="attribution" role="contentinfo">
     Challenge by <a href="https://www.frontendmentor.io/challenges/order-summary-component-QlPmajDUj" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://www.frontendmentor.io/profile/danyelcid">Dany el Cid</a>.
   </div>
